# TensorComprehensions

./: .buildinfo  .clang-format  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CodeOwners.md  CodingConventions.md  README.md  TARGETS  aten_integration.html  autotuner.html  build.sh  check_and_fix_format.sh  check_format.sh  coding_conventions.html  contacts.html  docker_image.html  genindex.html  halide_integration.html  index.html  inference.html  installation.html  installation_colab_research.html  installation_conda.html  installation_conda_dep.html  installation_docker_image.html  installation_non_conda.html  integrating_any_ml_framework.html  introduction.html  mapping_options.html  ml_with_tc.html  objects.inv  performance.html  py-modindex.html  report.html  search.html  searchindex.js  (+5 more)
examples/: CMakeLists.txt  README.md  blockdiagperm.cc  example_MLP_model.cc  example_batchmatmul.cc  example_fixture.h  example_group_convolution.cc  example_tmm.cc  tensordot.cc  wavenet.cc
examples/scripts/: 8.0.sh  AUTOTUNER_COMMANDS  autotuner_parallel.sh
isl_interface/: CMakeLists.txt  generate_template_isl.cc  isl_config.h
isl_interface/include/isl/: cpp.h  stdint.h
pybinds/: CMakeLists.txt  pybind_autotuner.cc  pybind_options.cc  pybind_utils.h
src/aten/: CMakeLists.txt  aten_compiler.cc
src/c2/: CMakeLists.txt  operator_meta.cc  register.cc
src/core/: CMakeLists.txt  autodiff.cc  compilation_cache.cc  cuda.cc  execution_engine.cc  flags.cc  halide2isl.cc  halide2pencil.cc  halide_utils.cc  islpp.cc  mapping_options.cc  mapping_options_cpp_printer.cc  rtc.cc  tc2halide.cc  tc_executor.cc
src/core/cpu/: cpu_tc_executor.cc
src/core/cuda/: cuda.cc  cuda_compilation_cache.cc  cuda_execution_engine.cc  cuda_mapping_options.cc  cuda_mapping_options_cpp_printer.cc  cuda_rtc.cc  cuda_tc_executor.cc
src/core/polyhedral/: CMakeLists.txt  codegen.cc  codegen_cuda.cc  codegen_llvm.cc  libpaths.cc.in  llvm_jit.cc  mapped_scop.cc  mapping_types.cc  memory_promotion.cc  memory_promotion_heuristic.cc  reduction_matcher.cc  schedule_isl_conversion.cc  schedule_print.cc  schedule_transforms.cc  schedule_tree.cc  scop.cc  tighten_launch_bounds.cc  unroll.cc
src/core/utils/: cuda_info.cc
src/version/: CMakeLists.txt
tc/aten/: CMakeLists.txt  aten-inl.h  aten.h  aten_autotuner-inl.h  aten_autotuner.h  aten_compiler-inl.h  aten_compiler.cc  aten_compiler.h  aten_compiler_api_rfc.h  aten_compiler_new_api-inl.h  aten_compiler_new_api.cc  aten_compiler_new_api.h  utils-inl.h
tc/autotuner/: CMakeLists.txt  autotuner-inl.h  autotuner.h  genetic_autotuner.cc  genetic_autotuner.h  genetic_autotuner_aten.cc  genetic_autotuner_aten.h  genetic_search.cc  genetic_search.h  genetic_tuning_harness.cc  genetic_tuning_harness.h  options_cache-inl.h  options_cache.h  parameters.cc  parameters.h  utils-inl.h  utils.cc  utils.h
tc/autotuner/cpu/: autotuner.cc
tc/autotuner/cuda/: autotuner.cc
tc/autotuner/utils/: printer.cc  printer.h  utils.cc  utils.h
tc/benchmarks/: CMakeLists.txt  MLP_model.cc  MLP_model.h  README.md  batchmatmul.cc  batchmatmul.h  benchmark_fixture.h  convolution.cc  group_convolution.cc  group_convolution.h  group_normalization.cc  group_normalization.h  kronecker.cc  kronecker.h  moments.cc  moments.h  tmm.cc  tmm.h  wavenet.cc  wavenet.h
tc/benchmarks/scripts/: 8.0.sh  9.0.sh  AUTOTUNER_COMMANDS  autotuner_parallel.sh  report.sh
tc/core/: CMakeLists.txt  check.cc  check.h  compilation_cache.cc  compilation_cache.h  compiler-inl.h  compiler.cc  compiler.h  compiler_api_rfc.h  constants.h  exceptions.h  execution_engine-inl.h  execution_engine.h  execution_engine_api_rfc.h  flags.cc  flags.h  functional.h  gpu.h  halide2isl.cc  halide2isl.h  halide_utils.cc  halide_utils.h  libraries.h  mapping_options-inl.h  mapping_options.cc  mapping_options.h  mapping_options_cpp_printer.cc  mapping_options_cpp_printer.h  tc2halide.cc  tc2halide.h  tc_api_rfc.h  tc_executor-inl.h  tc_executor.cc  tc_executor.h  tc_executor_api_rfc.h  tc_executor_new_api-inl.h  tc_executor_new_api.h  tensor-inl.h  tensor.cc  tensor.h  (+1 more)
tc/core/cpu/: cpu_backend.h  cpu_mapping_options-inl.h  cpu_mapping_options.cc  cpu_mapping_options.h  cpu_mapping_options_cpp_printer.cc  cpu_rtc.h  (+6 more)
tc/examples/: CMakeLists.txt  README.md  actor_critic_memory_replay.py  blockdiagperm.cc  check_opt_2.py  common.h  eval_options.py  generate_random_search.py  group_normalization.cc  mcts.py  my_utils.py  opt.txt  opt_bayes.py  opt_ho.py  optim_gen.py  predict_time.py  rl_algo.py  tensordot.cc  test_res.py  upsample.cc  wavenet.cc
tc/proto/: CMakeLists.txt  TARGETS  compcache.proto  mapping_options.proto
tc/version/: CMakeLists.txt  cuda_version.cc.in  cuda_version.h  version.cc.in  version.h
tensor_comprehensions/pybinds/: CMakeLists.txt  TARGETS  pybind_autotuner.cc  pybind_engine.cc  pybind_options.cc  pybind_utils.h  tc.cc  tclib.cc
test/: CMakeLists.txt  TARGETS  isl_cli_strategy.h  lang_utils.h  test_autodiff.cc  test_autotuner.cc  test_autotuner_utility.cc  test_basic.cc  test_basic_gpu.cc  test_caffe2.cc  test_check.cc  test_compilation_cache.cc  test_core.cc  test_corner_cases.cc  test_cuda_mapper.cc  test_cuda_mapper_memory_promotion.cc  test_execution_engine.cc  test_execution_engine_cache.cc  test_execution_engine_db.cc  test_harness.h  test_harness_aten.h  test_harness_aten_cuda.h  test_inference.cc  test_isl_functionality.cc  test_lang.cc  test_mapper.cc  test_mapper_llvm.cc  test_mapper_memory_promotion.cc  test_mapper_tapir.cc  test_tc2halide.cc  test_tc_mapper.cc  test_tc_mapper_bugs.cc  test_tc_mapper_harness-inl.h
test/caffe2/: CMakeLists.txt  TARGETS  test_harness-inl.h  test_harness.cc  test_harness.h
test/cuda/: CMakeLists.txt  TARGETS  test_autotuner.cc  test_autotuner_utility.cc  test_basic_gpu.cc  test_caffe2.cc  test_compilation_cache.cc  test_compile_and_run.cc  test_corner_cases.cc  test_execution_engine.cc  test_execution_engine_cache.cc  test_execution_engine_db.cc  test_harness_aten_cuda.h  test_tc_mapper.cc  test_tc_mapper_bugs.cc
(+2293 files in other folders)
